General layout of website implemented
Dashboard partially stylized.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <p>test</p>
+    <div class="container">
+
+        <div class="header">
+            <div class="search">
+                <img src="" alt="magnifying glass search icon">
+                <input type="text">
+            </div>
+            <div class="profile-icons">TEMP PROFILE ICONS</div>
+            <div class="profile-handle">TEMP PROFILE HANDLE</div>
+            <div class="action-buttons">
+                <button class="btn-new">New</button>
+                <button class="btn-upload">Upload</button>
+                <button class="btn-share">Share</button>
+            </div>
+        </div>
+
+        <div class="dashboard">
+            <div class="nav-item">
+                <img class="logo-icon" src="images/icons/dashboard.svg" alt="dashboard">
+                <p class="logo-text">Dashboard</p>
+            </div>
+            <div class="navigation">
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/home.svg" alt="Home">
+                    <p class="dash-text">Home</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/profile.svg" alt="Profile">
+                    <p class="dash-text">Profile</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/messages.svg" alt="Message">
+                    <p class="dash-text">Messages</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/history.svg" alt="History">
+                    <p class="dash-text">History</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/tasks.svg" alt="Tasks">
+                    <p class="dash-text">Tasks</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/communities.svg" alt="Community">
+                    <p class="dash-text">Communities</p>
+                </div>
+            </div>
+            <div class="navigation">
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/settings.svg" alt="Settings">
+                    <p class="dash-text">Settings</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/support.svg" alt="Support">
+                    <p class="dash-text">Support</p>
+                </div>
+                <div class="nav-item">
+                    <img class="icon" src="images/icons/privacy.svg" alt="Privacy">
+                    <p class="dash-text">Privacy</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="projects">
+            <p>Your Projects</p>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                    Orci maximus primis varius quisque est.</p>
+            </div>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                    Orci maximus primis varius quisque est. Tortor amet vulputate tempus massa phasellus posuere. Ex
+                    erat sagittis ultrices magnis ridiculus sodales vivamus. Libero est erat dignissim tincidunt
+                    tristique; proin nec mauris. Justo nec neque taciti netus fusce vivamus.</p>
+            </div>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                </p>
+            </div>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                    Dignissim per donec tempus vitae sagittis malesuada enim torquent.</p>
+            </div>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                    Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
+                    finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
+                    tempus massa phasellus posuere.</p>
+            </div>
+            <div class="project-card">
+                <p class="card-title">Super Cool Project</p>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
+                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                    Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
+                    finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
+                    tempus massa phasellus posuere. Ex erat sagittis ultrices magnis ridiculus sodales vivamus. Libero
+                    est erat dignissim tincidunt tristique; proin nec mauris.</p>
+            </div>
+        </div>
+
+        <div class="side-content">
+            <div class="announcements">
+                <p>Announcements</p>
+                <div class="announcement-div">
+                    <div class="announcement-content">
+                        <p class="announcement-title">Site Maintenance</p>
+                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                            donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
+                            potenti montes id donec. Orci maximus primis varius quisque est.</p>
+                    </div>
+                    <div class="announcement-content">
+                        <p class="announcement-title">Community Share Day</p>
+                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                            donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
+                            potenti montes id donec. Orci maximus primis varius quisque est.</p>
+                    </div>
+                    <div class="announcement-content">
+                        <p class="announcement-title">Updated Privacy Policy</p>
+                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                            donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
+                            potenti montes id donec. Orci maximus primis varius quisque est.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending-accounts">
+                <div>
+                    <img class="profile-icons" src="" alt="profile icon">
+                    <p class="trending-name">@NAME</p>
+                    <p class="trending-desc">Making website</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
