Header layout and styling
Completed header styling and layout.
Lightly changed gap of items in dashboard.
Added more icons,profile picture assets.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,31 @@
     <div class="container">
 
         <div class="header">
-            <div class="search">
-                <img src="" alt="magnifying glass search icon">
-                <input type="text">
+            <div class="header-top">
+                <div class="search">
+                    <img class="header-icon" src="images/icons/magnify.svg" alt="magnifying glass search icon">
+                    <input type="text">
+                </div>
+                <div class="profile-icons">
+                    <img class="header-icon bell" src="images/icons/bell.svg" alt="Bell icon for alert notifications">
+                    <img class="profile-icon-small" src="images/pfp/pepe.png" alt="Profile picture">
+                    <p class="header-text">John Doe</p>
+                </div>
+
             </div>
-            <div class="profile-icons">TEMP PROFILE ICONS</div>
-            <div class="profile-handle">TEMP PROFILE HANDLE</div>
-            <div class="action-buttons">
-                <button class="btn-new">New</button>
-                <button class="btn-upload">Upload</button>
-                <button class="btn-share">Share</button>
+            <div class="header-bottom">
+                <div class="profile-handle">
+                    <img class="profile-icon-large" src="images/pfp/pepe.png" alt="Profile picture">
+                    <div class="header-greeting">
+                        <p class="greeting">Hi there,</p>
+                        <p class="header-text">John Doe (@JDoe)</p>
+                    </div>
+                </div>
+                <div class="action-buttons">
+                    <button class="btn-new">New</button>
+                    <button class="btn-upload">Upload</button>
+                    <button class="btn-share">Share</button>
+                </div>
             </div>
         </div>
 
