Projects area layout partially completed
Layout is generally satisfactory and responsive.
No Styling implemented.
To add buttons to link to projects.

--- a/index.html
+++ b/index.html
@@ -92,53 +92,63 @@
         </div>
 
         <div class="projects">
-            <p>Your Projects</p>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                    Orci maximus primis varius quisque est.</p>
+            <p class="header-text">Your Projects</p>
+            <div class="card-container">
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                        Orci maximus primis varius quisque est.</p>
+                </div>
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                        Orci maximus primis varius quisque est. Tortor amet vulputate tempus massa phasellus posuere. Ex
+                        erat sagittis ultrices magnis ridiculus sodales vivamus. Libero est erat dignissim tincidunt
+                        tristique; proin nec mauris. Justo nec neque taciti netus fusce vivamus.</p>
+                </div>
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                    </p>
+                </div>
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                        Dignissim per donec tempus vitae sagittis malesuada enim torquent.</p>
+                </div>
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                        Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
+                        finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
+                        tempus massa phasellus posuere.</p>
+                </div>
+                <div class="project-card">
+                    <p class="card-title">Super Cool Project</p>
+                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
+                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
+                        donec.
+                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
+                        Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
+                        finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
+                        tempus massa phasellus posuere. Ex erat sagittis ultrices magnis ridiculus sodales vivamus.
+                        Libero
+                        est erat dignissim tincidunt tristique; proin nec mauris.</p>
+                </div>
             </div>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                    Orci maximus primis varius quisque est. Tortor amet vulputate tempus massa phasellus posuere. Ex
-                    erat sagittis ultrices magnis ridiculus sodales vivamus. Libero est erat dignissim tincidunt
-                    tristique; proin nec mauris. Justo nec neque taciti netus fusce vivamus.</p>
-            </div>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                </p>
-            </div>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                    Dignissim per donec tempus vitae sagittis malesuada enim torquent.</p>
-            </div>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                    Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
-                    finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
-                    tempus massa phasellus posuere.</p>
-            </div>
-            <div class="project-card">
-                <p class="card-title">Super Cool Project</p>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                    vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id donec.
-                    Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                    Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
-                    finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
-                    tempus massa phasellus posuere. Ex erat sagittis ultrices magnis ridiculus sodales vivamus. Libero
-                    est erat dignissim tincidunt tristique; proin nec mauris.</p>
-            </div>
+
         </div>
 
         <div class="side-content">
