--- a/index.html
+++ b/index.html
@@ -95,57 +95,128 @@
             <p class="header-text">Your Projects</p>
             <div class="card-container">
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                        Orci maximus primis varius quisque est.</p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes
+                            id
+                            donec.
+                            Orci maximus primis varius quisque est.</p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
+
                 </div>
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                        Orci maximus primis varius quisque est. Tortor amet vulputate tempus massa phasellus posuere. Ex
-                        erat sagittis ultrices magnis ridiculus sodales vivamus. Libero est erat dignissim tincidunt
-                        tristique; proin nec mauris. Justo nec neque taciti netus fusce vivamus.</p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes
+                            id
+                            donec.
+                            Orci maximus primis varius quisque est. Tortor amet vulputate tempus massa phasellus
+                            posuere.
+                        </p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                    </p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes
+                            id
+                            donec.
+                        </p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                        Dignissim per donec tempus vitae sagittis malesuada enim torquent.</p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent.</p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                        Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
-                        finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
-                        tempus massa phasellus posuere.</p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent.
+                        </p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <p class="card-title">Super Cool Project</p>
-                    <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec tempus
-                        vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes id
-                        donec.
-                        Orci maximus primis varius quisque est.Lorem ipsum odor amet, consectetuer adipiscing elit.
-                        Dignissim per donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae
-                        finibus potenti montes id donec. Orci maximus primis varius quisque est. Tortor amet vulputate
-                        tempus massa phasellus posuere. Ex erat sagittis ultrices magnis ridiculus sodales vivamus.
-                        Libero
-                        est erat dignissim tincidunt tristique; proin nec mauris.</p>
+                    <div>
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per donec
+                            tempus
+                            vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus potenti montes
+                            id
+                            donec.
+                        </p>
+                    </div>
+
+
+                    <div class="card-icons-container">
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/eye.svg" alt="Icon of an eye">
+                        </a>
+                        <a href="" target="_blank">
+                            <img class="card-icon" src="images/icons/github.svg" alt="github icon">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -170,8 +241,7 @@
                     <div class="announcement-content">
                         <p class="announcement-title">Updated Privacy Policy</p>
                         <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
-                            donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
-                            potenti montes id donec. Orci maximus primis varius quisque est.</p>
+                            donec tempus vitae sagittis malesuada enim torquent.</p>
                     </div>
                 </div>
             </div>
