Finished RHS content and minor layout changes
Added content and formatted the layout for the announcements and layout panels.
Decreased the min width for the cards to shrink a bit more when the window becomes smaller.

--- a/index.html
+++ b/index.html
@@ -224,32 +224,53 @@
 
         <div class="side-content">
             <div class="announcements">
-                <p>Announcements</p>
+                <p class="side-header-text">Announcements</p>
                 <div class="announcement-div">
                     <div class="announcement-content">
                         <p class="announcement-title">Site Maintenance</p>
-                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                        <p class="small-side-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
                             donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
                             potenti montes id donec. Orci maximus primis varius quisque est.</p>
                     </div>
                     <div class="announcement-content">
                         <p class="announcement-title">Community Share Day</p>
-                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                        <p class="small-side-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
                             donec tempus vitae sagittis malesuada enim torquent. Hac porta ridiculus a vitae finibus
                             potenti montes id donec. Orci maximus primis varius quisque est.</p>
                     </div>
                     <div class="announcement-content">
                         <p class="announcement-title">Updated Privacy Policy</p>
-                        <p class="announcement-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
+                        <p class="small-side-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Dignissim per
                             donec tempus vitae sagittis malesuada enim torquent.</p>
                     </div>
                 </div>
             </div>
-            <div class="trending-accounts">
-                <div>
-                    <img class="profile-icons" src="" alt="profile icon">
-                    <p class="trending-name">@NAME</p>
-                    <p class="trending-desc">Making website</p>
+            <div class="trending">
+                <p class="side-header-text">Trending</p>
+                <div class="trending-accounts">
+                    <div class="account">
+                        <img class="profile-icon-small" src="images/pfp/cat.png" alt="profile icon">
+                        <div>
+                            <p class="trending-name">@user_one</p>
+                            <p class="small-side-text">Making website</p>
+                        </div>
+
+                    </div>
+                    <div class="account">
+                        <img class="profile-icon-small" src="images/pfp/cat2.jpg" alt="profile icon">
+                        <div>
+                            <p class="trending-name">@user_two</p>
+                            <p class="small-side-text">Making app</p>
+                        </div>
+
+                    </div>
+                    <div class="account">
+                        <img class="profile-icon-small" src="images/pfp/pepe2.png" alt="profile icon">
+                        <div>
+                            <p class="trending-name">@JEFF</p>
+                            <p class="small-side-text">Making a nuke</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
